package com.github.orkest.ui.authentication

import android.annotation.SuppressLint
import android.content.Context
import android.content.Intent
import androidx.compose.animation.AnimatedVisibility
import androidx.compose.animation.EnterTransition
import androidx.compose.animation.ExitTransition
import androidx.compose.foundation.Image
import androidx.compose.foundation.background
import androidx.compose.foundation.layout.*
import androidx.compose.foundation.shape.RoundedCornerShape
import androidx.compose.material.*
import androidx.compose.material3.MaterialTheme
import androidx.compose.runtime.Composable
import androidx.compose.runtime.MutableState
import androidx.compose.runtime.mutableStateOf
import androidx.compose.runtime.remember
import androidx.compose.ui.Alignment
import androidx.compose.ui.Modifier
import androidx.compose.ui.graphics.Color
import androidx.compose.ui.platform.LocalContext
import androidx.compose.ui.platform.testTag
import androidx.compose.ui.res.painterResource
import androidx.compose.ui.text.TextStyle
import androidx.compose.ui.text.style.TextAlign
import androidx.compose.ui.tooling.preview.Preview
import androidx.compose.ui.unit.dp
import androidx.compose.ui.unit.sp
import com.github.orkest.data.Constants
import coil.annotation.ExperimentalCoilApi
import coil.compose.rememberImagePainter
import com.github.orkest.data.Providers
import com.github.orkest.R
import com.github.orkest.ui.MainActivity
import com.github.orkest.ui.theme.OrkestTheme
import com.github.orkest.ui.theme.White
import com.google.firebase.auth.ktx.auth
import com.google.firebase.ktx.Firebase


/**
 * The form used to create a new user
 */
@SuppressLint("UnusedMaterialScaffoldPaddingParameter")
@Composable
fun SignUpForm(viewModel: AuthViewModel) {

    // Value storing the context, used later to launch the Main Activity
    val context = LocalContext.current

    // Value used for the dropDown menu selecting the providers
    val expanded = remember { mutableStateOf(false) }

    // Value used to display an error message if the username already exists
    val userExists = remember { mutableStateOf(false) }

    // Save bio in SharedPreferences
    val sharedPref = context.getSharedPreferences("user_credentials", Context.MODE_PRIVATE)

    // Font used for the title

    Scaffold(
        //Creates the top bar
        topBar = {
            TopAppBar(
                title = { Text(text = "Create Your Profile",
                    color = Color.White) },

                backgroundColor = Color.Black
            )},

        content = {
            Column(
                modifier = Modifier.padding(20.dp),
                verticalArrangement = Arrangement.Center,
                horizontalAlignment = Alignment.CenterHorizontally
            ) {

                //Title of the page
                Text(
                    text = "Create Your Profile",
                    style = TextStyle(fontSize = 35.sp, fontFamily = Constants.FONT_MARKER),
                    color = Color.Black
                )

                AddSpace()

                // Field to enter the username
                TextField(
                    label = { Text(text = "Username") },
                    value = viewModel.getUsername(),
                    onValueChange = { viewModel.updateUsername(it) }
                )


                //Displays an error when the username already exists
                AnimatedVisibility(visible = userExists.value){
                    Text(text = "This username already exists!",
                        color = Color.Red,
                        modifier = Modifier.width(280.dp))
                }

                AddSpace()

                // Field to enter the bio description
                TextField(
                    modifier = Modifier.width(280.dp),
                    label = { Text(text = "Profile Description") },
                    value = viewModel.getBio(),
                    onValueChange = { viewModel.updateBio(it) },
                )

                AddSpace()

                // Box with button to choose the service provider from a dropDownMenu
                ChooseServiceProvider(viewModel, expanded)

                AddSpace()

                //Button to confirm choices
                ConfirmButton(viewModel, context, userExists)
            }
        })
}

fun saveUserBio(context: Context, bio: String) {
    val sharedPref = context.getSharedPreferences("user_profile", Context.MODE_PRIVATE)
    with(sharedPref.edit()) {
        putString("bio", bio)
        apply()
    }
}

fun loadUserBio(context: Context): Pair<String?, String?> {
    val sharedPref = context.getSharedPreferences("user_profile", Context.MODE_PRIVATE)
    val bio = sharedPref.getString("username", null)
    val email = sharedPref.getString("email", null)
    //return Pair(username, email)
    return Pair(bio, email)
}

/**
 * Creates the button to confirm and start the creation of the profile
 */
@Composable
private fun ConfirmButton(viewModel: AuthViewModel, context: Context, userExists: MutableState<Boolean>){
    val error = remember { mutableStateOf(false) }
    val errorMessage = remember { mutableStateOf("") }


    Box(modifier = Modifier.padding(40.dp, 0.dp, 40.dp, 0.dp)) {
        val waiting = remember { mutableStateOf(false) }

        Button(
            onClick = { onConfirmListener(context,error,errorMessage,waiting, userExists, viewModel) },
            shape = RoundedCornerShape(50.dp),
            colors = ButtonDefaults.buttonColors(backgroundColor = Color.Black),
            modifier = Modifier
                .fillMaxWidth()
                .height(50.dp)

        ) {
            Text(text = if (waiting.value) "Creating Profile" else "Create Profile",
                style = TextStyle(fontSize = 20.sp),
                color = Color.White
            )
        }
    }

    // Display of the error
    Box{
        AnimatedVisibility(visible = error.value,
            enter= EnterTransition.None,
            exit = ExitTransition.None) {
            Text(text = errorMessage.value.
                        ifEmpty { "An error occurred while creating your profile"},
                color = Color.Red,
                textAlign = TextAlign.Center,
                modifier = Modifier
                    .width(280.dp)
                    .align(Alignment.Center).padding(40.dp))
        }
    }

}


/**
 * Function called when the confirm button is pressed
 */
private fun onConfirmListener(context: Context, error: MutableState<Boolean>, errorMessage: MutableState<String>,
                        waiting: MutableState<Boolean>,userExists: MutableState<Boolean>, viewModel: AuthViewModel
){

    // Resets the values used for error handling
    error.value = false
    waiting.value = true
    userExists.value = false

    // Calls the function to create the user
    viewModel.createUser().whenComplete { result, e ->
        waiting.value = false
        if (e != null){
            // Print the Exception Message on the UI
            error.value = true
            errorMessage.value = e.message?:""

        }else{
            if(result) {
                Constants.CURRENT_LOGGED_USER = viewModel.getUsername().text
                Constants.CURRENT_USER_PROVIDER = viewModel.getProvider()
                // Save the user's credentials in SharedPreferences
                saveUserCredentials(context, Constants.CURRENT_LOGGED_USER, Firebase.auth.currentUser?.email.toString())
                //Launches intent to the main Activity
                val intent = Intent(context, MainActivity::class.java)
                context.startActivity(intent)
            } else {
                //Displays error
                userExists.value = true
            }
        }
    }
}

/**
 * Adds a space between the different elements of the page
 */
@Composable
private fun AddSpace(){
    Spacer(modifier = Modifier.height(15.dp))
}

/**
 * Creates the box component for the choice of the service provider
 */
@Composable
private fun ChooseServiceProvider(viewModel: AuthViewModel, expanded: MutableState<Boolean>){

    val logos = mapOf(
        Providers.SPOTIFY to R.drawable.spotify_logo,
        Providers.DEEZER to R.drawable.deezer_logo,
        Providers.APPLE_MUSIC to R.drawable.apple_music_logo,
    )

    Box() {
        // The button that will be displayed for the choice of the provider
        ProviderButtonContent(viewModel = viewModel, expanded = expanded , logos = logos)

        DropDownMenu(viewModel = viewModel, expanded = expanded, logos = logos)


    }
}

/**
 * Creates the button of the dropDownMenu for the choice of the service provider
 */
@Composable
@OptIn(ExperimentalCoilApi::class)
private fun ProviderButtonContent(viewModel: AuthViewModel, expanded: MutableState<Boolean>, logos: Map<Providers, Int>){

    Button(
        colors= ButtonDefaults.buttonColors(backgroundColor = Color(217,217,217)),
        onClick = {expanded.value = true},
        shape = RoundedCornerShape(0.dp),
        modifier = Modifier
            .width(280.dp)
            .height(50.dp)
            .background(Color.Gray)
            .testTag("providerButton")
    ) {
        // Logo of the provider
        Image(
            painter = rememberImagePainter(logos[viewModel.getProvider()]!!),
            contentDescription = "Logo of the provider",
            modifier = Modifier
                .size(40.dp)
                .padding(start = 0.dp)
                // Add alignment at the end of the row
                .alignByBaseline()
        )

        // Name of the provider
        Text(
            text = viewModel.getProvider().value,
            style = TextStyle(fontSize = 18.sp),
            modifier = Modifier
                .padding(start = 20.dp)

                .align(Alignment.CenterVertically)
        )

        // Spacer to push the Icon to the right edge of the Button
        Spacer(modifier = Modifier.weight(1f))

        // Arrow to indicate that the button is clickable
        Icon(
            painter = painterResource(R.drawable.down_arrow),
            contentDescription = "Arrow to indicate that the button is clickable",
            modifier = Modifier
                .size(30.dp)
                .padding(end = 10.dp)
                // Add alignment at the end of the row
                .align(Alignment.CenterVertically)
        )
    }

}

/**
 * Creates the dropDownMenu for the choice of the service provider
 */
@Composable
private fun DropDownMenu(viewModel: AuthViewModel, expanded: MutableState<Boolean>, logos: Map<Providers, Int>){
    DropdownMenu(
        expanded = expanded.value,
        onDismissRequest = { expanded.value = false },
        modifier = Modifier
            .background(White)
            .width(280.dp)
    ) {
        Providers.values().forEachIndexed { _, option ->
            DropdownMenuItem(
                onClick = {
                    viewModel.updateProvider(option)
                    expanded.value = false
                },
                modifier = Modifier
                    .testTag("option ${option.value}")
            ) {
                // Logo of the provider
                Image(
                    painter = painterResource(logos[option]!!),
                    contentDescription = "Logo of the provider",
                    modifier = Modifier
                        // Set image size to 40 dp
                        .size(40.dp)
                )

                Spacer(modifier = Modifier.width(10.dp))


                Text(text = option.value,
                    modifier = Modifier
                        .padding(start = 20.dp))

            }
        }
    }
}


@Preview
@Composable
fun Preview (){
    OrkestTheme {
        // A surface container using the 'background' color from the theme
        androidx.compose.material3.Surface(
            modifier = Modifier.fillMaxSize(),
            color = MaterialTheme.colorScheme.background
        ) {
            SignUpForm(AuthViewModel())
        }
    }
}






